# experiment_projects

./: .env  README.md  langgraph.json  my_llm.py  pyproject.toml
data/: research.md
notebooks/: experiments.ipynb
