[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langgraph-api>=0.8.0",
    "langgraph-cli>=0.4.23",
    "langgraph[cli]>=1.1.8",
    "llm>=0.30",
    "typing>=3.10.0.0",
    "typing-extensions>=4.15.0",
]
